my contact on navbar was not appearing on small screens fixed that

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -20,6 +20,7 @@
 .nav-links {
   display: flex;
   list-style: none;
+  /*gap: 35px;*/
   gap: 35px;
 }
 
@@ -71,7 +72,7 @@
     width: 100%;
     text-align: center;
     transition: 0.4s;
-    padding: 30px 0;
+    padding: 0;
   }
 
   .nav-links.active {
